<resources>
    <string name="app_name">Project Manhattan</string>
    <string name="login">Log In</string>
    <string name="login_email">Enter your E-mail</string>
    <string name="login_password">Enter your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_email">E-mail to use</string>
    <string name="sign_in_name">Enter your Name</string>
    <string name="sign_in_college">Enter your College Name</string>
    <string name="sign_in_password">Enter your Password</string>
    <string name="sign_in_confirm_pass">Confirm Password</string>
    <string name="car_setting">Car</string>
    <string name="car_setting_explanation">This setting can be changed later.</string>
    <string name="continue_button">Continue</string>
    <string name="drivey_button">Drivey</string>
    <string name="ridey_button">Ridey</string>


    <!--
    - TabLayout Strings
    -->

    <string name="profile_title">Profile</string>
    <string name="college_title">College</string>
    <string name="car_model_title">Car Model</string>
    <string name="rating_title">Rating</string>
    <string name="drivey_ridey_ratio_title">Drivey/Ridey Ratio</string>


    <string name="addresses_title">Addresses</string>
    <string name="settings_title">Settings</string>
    <string name="home_title">Home</string>

    <!--
    - Addresses CardView Strings
    -->

    <string name="go_button">Go</string>

    <!--
    - College Spinner Array String
    -->

    <string-array name="college_array">
        <item>ITESO (Instituto Tecnológico de Estudios Superiores de Occidente)</item>
        <item>Tecnológico de Monterrey</item>
        <item>Universidad Autónoma de Guadalajara</item>
        <item>Universidad de Guadalajara</item>
        <item>Universidad del Valle de Atemajac</item>
        <item>Universidad del Valle de México</item>
        <item>Universidad Panamericana</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
